test/files/neg/i20026.check
JTest.java:3: error: illegal start of type declaration
import java.util.*;
       ^
1 error
